--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,28 @@
+.GradientEclipse {
+    position: absolute;
+    width: 100%;
+    height: 70vh;
+    background-position: left;
+    background: rgba(28, 141, 143, 0.6);
+    filter: blur(800px);
+}
+
+.BackgroundLogomark {
+    position: absolute;
+    width: 100%;
+    height: 70vh;
+    background: url('./assets/background-logomark.png');
+    background-repeat: no-repeat;
+    background-size:contain;
+    background-position-x: 96%;
+}
+
 .App {
     background-color: #0D324D;
     width: 100vw;
-    height: 100vh;
+    min-height: 200vh;
+}
+
+.IntroSection{
+    margin-top: 200px;
 }
