--- a/src/App.css
+++ b/src/App.css
@@ -17,10 +17,9 @@
     background-position-x: 96%;
 }
 
-.App {
+body {
     background-color: #0D324D;
     width: 100vw;
-    min-height: 300vh;
 }
 
 .IntroSection{
@@ -28,5 +27,9 @@
 }
 
 .PrizesSection{
+    margin-top: 200px;
+}
+
+.TwitterSection{
     margin-top: 200px;
 }
