Change sponsor section

--- a/src/App.css
+++ b/src/App.css
@@ -31,9 +31,13 @@ body {
 }
 
 .TwitterSection{
-    margin-top: 200px;
+    margin-top: 150px;
 }
 
 .RegisterSection{
     margin-top: 100px;
+}
+
+.SponsorSection{
+    margin-top: 150px;
 }
