--- a/src/components/NavbarSection.scss
+++ b/src/components/NavbarSection.scss
@@ -40,7 +40,7 @@
     &:hover {
       color: #0e3a53;
       background-color: #fff;
-      font-weight: 700;
+      // font-weight: 700;
     }
   }
 }
