--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,15 @@
   filter: blur(800px);
 }
 
+.GradientEclipseFooter {
+  position: absolute;
+  width: 100%;
+  height: 600px;
+  /* left: 50%; */
+  background: rgba(28, 141, 143, 0.6);
+  filter: blur(800px);
+}
+
 .BackgroundLogomark {
   position: absolute;
   width: 100%;
