--- a/src/components/FooterSection.scss
+++ b/src/components/FooterSection.scss
@@ -1,7 +1,12 @@
+.Footer {
+  position: relative;
+}
+
 .Esthetique {
   font-size: 3em;
   font-weight: bold;
   color: #ffffff;
+  margin-bottom: -15px !important;
 }
 
 .UIUX {
@@ -9,8 +14,8 @@
   font-weight: 600;
   color: #11495e;
   background-color: white;
-  padding: 10px 15px 10px 15px !important;
-  width: 30%;
+  padding: 5px 10px !important;
+  width: max-content;
 }
 
 .footercont {
@@ -27,7 +32,8 @@
   margin: 4.5%;
 }
 .foot {
-  font-size: 1.5em;
+  font-size: 24px;
+  margin-bottom: 10px;
   color: white;
   font-weight: normal;
 }
@@ -39,6 +45,7 @@
   width: 100%;
   height: 6%;
   background: linear-gradient(to right, #0a263c 45%, #1b7b7c) !important;
+  opacity: 0.5;
 }
 .endbrtxt {
   font-size: medium;
@@ -46,4 +53,46 @@
 }
 .endbr {
   margin-top: 3%;
+}
+
+.socials {
+  > a {
+    margin: 30px 10px;
+    &:first-child {
+      margin: 0 10px 0 0;
+    }
+  }
+  margin: 40px 0 0 0;
+}
+
+.footerNav {
+  color: #fff;
+  font-size: 18px;
+  font-weight: normal;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  > span {
+    cursor: pointer;
+    &:hover {
+      opacity: 0.8;
+    }
+    > a {
+      color: #fff !important;
+      text-decoration: none !important;
+    }
+    margin: 5px auto;
+  }
+}
+
+@media only screen and (max-width: 900px) {
+  .Footer {
+    text-align: center;
+  }
+  .UIUX {
+    margin: 25px auto;
+  }
+  .socials {
+    margin: 20px 0 0 0;
+  }
 }
