--- a/src/components/FooterSection.scss
+++ b/src/components/FooterSection.scss
@@ -41,18 +41,26 @@
 .FOSS {
   width: 40%;
 }
-.endbar {
+
+.endbrtxt {
+  padding-top: 5px !important;
+  padding-left: 40px !important;
+  font-size: medium;
+  color: #ffffff;
+  text-align: left;
+}
+.endbrtxttwo{
+  padding-right: 40px !important;
+  font-size: medium;
+  color: #ffffff;
+  text-align: right;
+}
+.endbr {
+  margin-top: 3%;
   width: 100%;
   height: 6%;
   background: linear-gradient(to right, #0a263c 45%, #1b7b7c) !important;
   opacity: 0.5;
-}
-.endbrtxt {
-  font-size: medium;
-  color: #ffffff;
-}
-.endbr {
-  margin-top: 3%;
 }
 
 .socials {
@@ -95,4 +103,19 @@
   .socials {
     margin: 20px 0 0 0;
   }
+.endbrtxt {
+  padding-top: 0px !important;
+  padding-left: 0px !important;
+  margin-bottom: 10p !important;
+  text-align: center;
+}
+.endbrtxttwo{
+  padding-top: 0px !important;
+  padding-right: 0px !important;
+  margin-top: 0px !important;
+  margin-bottom: 10px !important;
+  font-size: medium;
+  color: #ffffff;
+  text-align: center;
+}
 }
