Add silver sponsor

--- a/src/components/SponsorSection.scss
+++ b/src/components/SponsorSection.scss
@@ -26,12 +26,15 @@
         margin-bottom: 20px;
     }
 
+    .SponsorImage{
+      margin-bottom: 40px !important;
+    }
 
-  .SponsorName{
-    font-size: 1.6em;
-  }
+    .SponsorName{
+      font-size: 1.6em;
+    }
 
     .MediaPartnerImage{
       width: 60vw;
-  }
+    }
   } 
