Add satriaana co-sponsor

--- a/src/components/SponsorSection.scss
+++ b/src/components/SponsorSection.scss
@@ -22,10 +22,20 @@
     padding: 12px;
   }
 
+  .CoSponsor{
+    height: 100px;
+  }
+
   .MediaPartnerImage{
     height: "30%"; 
   }
   
+  @media screen and (max-width: 899px) {
+    .SponsorName{
+      text-align: center;
+    }
+  }
+
   @media screen and (max-width: 600px) {
     .SponsorHeading {
         font-size: 2.5em;
@@ -46,5 +56,12 @@
 
     .MediaPartnerImage{
       width: 60vw;
+      margin-bottom: 40px !important;
+    }
+
+    .CoSponsor{
+      width: 60vw;
+      height: auto;
+
     }
   } 
