Chage gold sponsor logo

--- a/src/components/SponsorSection.scss
+++ b/src/components/SponsorSection.scss
@@ -13,13 +13,12 @@
   }
 
   .SponsorImage{
-    height: 150px;
+    height: 130px;
   }
 
   .GoldImage{
-    height: 90px;
-    background-color: white;
-    padding: 12px;
+    height: 100px;
+    margin-top: 6px;
   }
 
   .CoSponsor{
