Add learning partner

--- a/src/components/SponsorSection.scss
+++ b/src/components/SponsorSection.scss
@@ -26,7 +26,11 @@
   }
 
   .MediaPartnerImage{
-    height: "30%"; 
+    margin-top: 40px !important;
+  }
+
+  .LearningPartner{
+    height: 60% !important; 
   }
   
   @media screen and (max-width: 899px) {
